<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.ErrorFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_flying_saucer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textViewError1"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/textViewError1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_text1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintBottom_toTopOf="@+id/textViewError2"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textViewError2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_text2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewError1"
        app:layout_constraintBottom_toTopOf="@+id/textViewTryAgain"
        android:layout_marginTop="@dimen/margin"/>

    <TextView
        android:id="@+id/textViewTryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_agrain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewError2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/margin"
        android:textStyle="bold"
        android:textColor="@color/link_color"/>

</androidx.constraintlayout.widget.ConstraintLayout>